--- a/random/prezentacija/prezentacija.html
+++ b/random/prezentacija/prezentacija.html
@@ -239,11 +239,19 @@
 				</div>
 			</section>
 
-			<section data-background-image="./assets/cakor.jpg">
+			<section data-background-image="./assets/skadar.jpg">
 				<div class="sl box-left bg-light p-all">
 					<div class="">
 						<h1 style="text-align: left;">Skadar</h1>
-						<p style="text-align: left;"> Srpska vojska i izbeglice dolaze u skadar 12. decembar</p>
+						<p style="text-align: left;"> U skadru se više ne umire od zime i bola <br> već od gladi</p>
+					</div>
+				</div>
+			</section>
+			<section data-background-image="./assets/tunis.jpg">
+				<div class="sl box-left bg-light p-all">
+					<div class="">
+						<h1 style="text-align: left;">Prvi spas </h1>
+						<p style="text-align: left;"> Početak januara 1916.<br> <br>Počeli su da dolaze brodovi <br> koji su vozili ljude <br> za Bivez i Tunis. </p>
 					</div>
 				</div>
 			</section>
