--- a/random/prezentacija/prezentacija.html
+++ b/random/prezentacija/prezentacija.html
@@ -53,8 +53,8 @@
 			<section>
 				<div class="sl">
 					<h1>Veliki rat</h1>
-					<p class="fragment fade-in" data-autoslide="1000">Hiljade je umrelo u odbrani Srbije</p>
-					<p class="fragment fade-in" data-autoslide="1000">Hiljade će umreri od zime i gladi</p>
+					<p class="fragment fade-in" data-autoslide="1000">Hiljadu je umrlo u odbrani Srbije</p>
+					<p class="fragment fade-in" data-autoslide="1000">Hiljade će umreti od zime i gladi</p>
 					<p class="fragment fade-in">Jedini spas jest povlačenje iz otađbine</p>
 				</div>
 			</section>
@@ -73,7 +73,7 @@
 			<section>
 				<div class="sl col-2__wrapper">
 					<div class="col-2__column"><img class="mn" src="./assets/uvod_sl1.jpg">
-						<p>Povlačenja srba u oktobru 1915.</p>
+						<p>Povlačenja Srba u oktobru 1915.</p>
 					</div>
 					<div class="col-2__column ">
 						<div class="bg-light p-all text-l">
@@ -105,11 +105,11 @@
 					</div>
 					<div class="col-2__column" style="height: 90vh;max-height: 500px;">
 						<div class="bg-light p-all text-l" style="height: 100%; overflow-y: auto;">
-							<p>U Nišu oćekuje pomoć Francuske vlade, devojke skupljaju cveće, prave poklone i uče francusku himnu.</p>
+							<p>U Nišu oćekuje se pomoć Francuske vlade, devojke skupljaju cveće, prave poklone i uče francusku himnu.</p>
 							<iframe width="560" height="250" src="https://www.youtube.com/embed/QY8tdnqdPwI" frameborder="0"
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen></iframe>
-							<p>14. oktobra Bugrska se pridužuje napadu na srbiju, pomoći nije bilo. Niš počinje evakuaciju.</p>
+							<p>14. oktobra Bugarska se pridužuje napad na Srbiju, pomoći nije bilo. Niš počinje evakuaciju.</p>
 						</div>
 					</div>
 			</section>
@@ -120,7 +120,7 @@
 				<div class="sl box-left bg-light p-all">
 					<div class="">
 						<h1>Kraljevo</h1>
-						<p>Vlada Srbije se seli u Kraljevo <br> Počinje povlačenja prema Ibru</p>
+						<p>Vlada Srbije se seli u Kraljevo, <br> Počinje povlačenje prema Ibru</p>
 					</div>
 				</div>
 			</section>
@@ -136,7 +136,7 @@
 					<div class="">
 						<h1 style="text-align: left;">Ibar</h1>
 						<p style="text-align: left;">Kolone ljudi se povlače iz zemlje. <br> Niko nije znao šta ih <br>
-							na dugom puta.</p>
+						čeka na dugom puta.</p>
 					</div>
 				</div>
 			</section>
@@ -147,7 +147,7 @@
 				<div class="sl box-left bg-light p-all">
 					<div class="">
 						<h1 style="text-align: left;">Tvrđava Maglič</h1>
-						<p style="text-align: left;"> Je meso nako kome su <br> mnogi migli da pronađu mir <br>
+						<p style="text-align: left;"> Je mesto na kome su <br> mnogi mogli da pronađu mir <br>
 							na ovom dugom putu.</p>
 					</div>
 				</div>
@@ -181,7 +181,7 @@
 			<section data-background-image="./assets/mitrovica2.jpg">
 				<div class="sl box-left bg-light p-all">
 					<div class="">
-						<p style="text-align: left;"> Najveći probem u ovom <br> trenutku jeste hrana <br> počinje da vlada glad</p>
+						<p style="text-align: left;"> Najveći problem u ovom <br> trenutku jeste hrana. <br> Počinje da vlada glad</p>
 					</div>
 				</div>
 			</section>
@@ -189,7 +189,7 @@
 			<section data-background-image="./assets/metohija3.jpg">
 				<div class="sl box-right bg-light p-all" style=" width: max-content;">
 					<div class="">
-						<p style="text-align: left;"> Posle 2 pikušaja spajanja sa saveznicima <br> jedini put spasu jeste ka <br> Metohiji preko Crnoj Gori ka Albaniji </p>
+						<p style="text-align: left;"> Posle 2 pokušaja spajanja sa saveznicima <br> jedini put spasu jeste ka <br> Metohiji preko Crnoj Gori ka Albaniji </p>
 					</div>
 				</div>
 			</section>
@@ -198,7 +198,7 @@
 				<div class="sl box-right bg-light p-all" style=" width: max-content;">
 					<div class="">
 						<h1 style="text-align: left;">Prizren</h1>
-						<p style="text-align: left;"> Prizren je bio pun oko nekoliko <br> stotinak hiljada srpskih izbeglica <br>Ovde kralj u zgradi prizrenske <br>bogoslovije krije krunu okupirane zemlje </p>
+						<p style="text-align: left;"> Prizren je bio pun oko nekoliko <br> stotinak hiljada srpskih izbeglica.<br>Ovde kralj u zgradi prizrenske <br>bogoslovije krije krunu okupirane zemlje.</p>
 					</div>
 				</div>
 			</section>
@@ -206,7 +206,7 @@
 				<div class="sl box-left bg-light p-all">
 					<div class="">
 						<h1 style="text-align: left;">Peć</h1>
-						<p style="text-align: left;"> Moral vojske je bio mali <br> Vrhovni komandanti odlučuju <br> da se ide u ofanzivu.</p>
+						<p style="text-align: left;"> Moral vojske je nizak. <br> Vrhovni komandanti odlučuju <br> da se ide u ofanzivu.</p>
 					</div>
 				</div>
 			</section>
@@ -215,7 +215,7 @@
 				<div class="sl box-left bg-light p-all">
 					<div class="">
 						<h1 style="text-align: left;">Planina Čakor</h1>
-						<p style="text-align: left;"> Zapamćena je kao planinan smrti</p>
+						<p style="text-align: left;"> Zapamćena je kao planinan smrti.</p>
 					</div>
 				</div>
 			</section>
@@ -234,7 +234,7 @@
 			<section data-background-image="./assets/vezmost2.jpg">
 				<div class="sl box-left bg-light p-all">
 					<div class="">
-						<p style="text-align: left;"> Oko 20.000 ljudi ostaće večno zavejani</p>
+						<p style="text-align: left;"> Oko 20.000 ljudi ostaće večno zavejani.</p>
 					</div>
 				</div>
 			</section>
@@ -243,7 +243,7 @@
 				<div class="sl box-left bg-light p-all">
 					<div class="">
 						<h1 style="text-align: left;">Skadar</h1>
-						<p style="text-align: left;"> U skadru se više ne umire od zime i bola <br> već od gladi</p>
+						<p style="text-align: left;"> U Skadru se više ne umire od zime i bola <br> već od gladi.</p>
 					</div>
 				</div>
 			</section>
